Fix header font on safari, make dismissing on mobile easier

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -66,3 +66,9 @@ textarea {
 body {
   font-family: "DM Sans", sans-serif;
 }
+
+h1,
+h2,
+h3 {
+  letter-spacing: -1px;
+}
